--- a/index.css
+++ b/index.css
@@ -80,13 +80,18 @@ button {
     border-color: #2f742a;
     height: 50px;
     width: 90px;
+    margin: 10px;
     cursor: pointer;
     color: #000000; /* цвет текста */
     background: rgb(16, 164, 69); /* фон кнопки */
-    transition: background-color 0.6s;  /* настраивает анимированнаое изменение цвета кнопки при наведении курсора */
+    box-shadow: 5px 5px 30px #686d6b;  /* Делает тень кнопке. 1е значение - горизонт положение тени. 2е значение - вертик положение. 3е значение - размытие*/
+    /*transition: background-color 0.6s;  !* настраивает анимированнаое изменение цвета кнопки при наведении курсора *!*/
 }
 button:hover {background: #57e357; }
-button:active {background: darkgreen}
+button:active {
+    /*background: darkgreen;*/
+    opacity: 0.5;
+}
 
 a.knopka {
     transition: background-color 0.6s;
